--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,6 @@ jobs:
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
-          path: banner-slides.qmd
+          path: logo-slides.qmd
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
